apps/pez-solutions/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pez-solutions
  labels:
    istio.io/dataplane-mode: ambient
