apps/pez-solutions/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pez-solutions
  namespace: pez-solutions
spec:
  selector:
    app: pez-solutions
  ports:
    - name: http
      port: 8080
      targetPort: http
