apps/pez-solutions/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pez-solutions
  namespace: pez-solutions
spec:
  parentRefs:
    - name: shared-gateway
      namespace: istio-system
  hostnames:
    - pez-solutions.lon.pez.sh
  rules:
    - backendRefs:
        - name: pez-solutions
          port: 8080
